--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,13 +5,13 @@
     <div class="col-8 offset-2">
       <h1><%=listing.title %></h1>
     </div>
-    <div class="card col-11 card-del">
+    <div class="listing-card col-11 card-del">
       <img
         src="<%= listing.image %>"
         class="card-img-top show-img"
         alt="Image"
       />
-      <div class="card-body col-30">
+      <div class="card-body mt-4 col-30">
         <p class="card-text">
           <%=listing.description %> <br />
           <hr>
@@ -47,13 +47,21 @@
         <button class="btn btn-outline-dark">Submit</button>
       </form>
       <hr>
-      <h4>All Reviews</h4>
-      <ul>
-        
+      <p><b>All Reviews</b></p>
+      <div class="row">
         <% for(review of listing.reviews){ %>
-        <li><%= review.comment %>, <%= review.rating %></li>  
+          <div class="card col-5 ms-3 mb-3">
+            <div class="card-body">
+              <h5 class="card-title">karan gupta</h5>
+              <p class="card-text"><%= review.comment %></p>
+              <p class="card-text"><%= review.rating %></p>
+            </div>
+            <form class="mb-3" method="post" action="/listing/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+              <button class="btn btn-sm edit-btn">Delete</button>
+            </form>
+          </div>  
           <% } %>
-        </ul>
+        </div>
     </div>
   </div>
   <br>
