--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
   <h2>Edit your Listing</h2>
   <form
     method="post"
-    action="/listing/<%= listing._id %>?_method=PUT"
+    action="/listings/<%= listing._id %>?_method=PUT"
     class="needs-validation"
     novalidate
   >
