--- a/views/show.ejs
+++ b/views/show.ejs
@@ -26,8 +26,8 @@
     </div>
 
     <div class="btns mb-5">
-      <a class="btn btn-dark offset-2 edit-btn" href="/listing/<%=listing._id %>/edit">Edit this Listing</a>
-      <form method="post" action="/listing/<%= listing._id %>?_method=DELETE">
+      <a class="btn btn-dark offset-2 edit-btn" href="/listings/<%=listing._id %>/edit">Edit this Listing</a>
+      <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
         <button class="offset-4 btn btn-dark" >Delete</button>
       </form>
     </div>
