--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -17,7 +17,7 @@
           <input
             class="form-control"
             type="text"
-            name="title"
+            name="listing[title]"
             value="<%= listing.title %>"
             required
           />
@@ -26,7 +26,7 @@
         </div>
         <div class="mb-4">
           <label class="form-label" for="description">Description</label>
-          <textarea class="form-control" type="text" name="description">
+          <textarea class="form-control" type="text" name="listing[description]">
 <%= listing.description %></textarea
           >
         </div>
@@ -35,7 +35,7 @@
           <input
             class="form-control"
             type="text"
-            name="url"
+            name="listing[image]"
             value="<%= listing.image %>"
             required
           />
@@ -47,7 +47,7 @@
             <input
               class="form-control"
               type="number"
-              name="price"
+              name="listing[price]"
               value="<%= listing.price %>"
               required
             />
@@ -58,7 +58,7 @@
             <input
               class="form-control"
               type="text"
-              name="country"
+              name="listing[country]"
               value="<%= listing.country %>"
               required
             />
@@ -70,7 +70,7 @@
           <input
             class="form-control"
             type="text"
-            name="location"
+            name="listing[location]"
             value="<%= listing.location %>"
             required
           />
