--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,4 +1,4 @@
-<nav class=" navbar navbar-expand-md sticky-top  border-bottom">
+<nav class="navbar navbar-expand-md sticky-top border-bottom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#"><i class="fa-solid fa-ship"></i></a>
     <button
@@ -14,6 +14,14 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/listings">All Listings</a>
         <a class="nav-link" href="/listings/new">Create Listings</a>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if (!currUser) { %>
+        <a class="nav-link" href="/signup">Sign up</a>
+        <a class="nav-link" href="/login">Log in</a>
+        <% } %> <% if (currUser) { %>
+        <a class="nav-link" href="/logout">Log out</a>
+        <% } %>
       </div>
     </div>
   </div>
