--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,7 @@
       />
       <div class="card-body mt-4 col-30">
         <p class="card-text">
+          <i><%= listing.owner.username %></i>
           <%=listing.description %> <br />
           <hr>
           &#8377; <%=listing.price?.toLocaleString("en-IN") %> <br />
