--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,7 +13,8 @@
       />
       <div class="card-body mt-4 col-30">
         <p class="card-text">
-          <i><%= listing.owner.username %></i>
+          Owned by ~ <i><%= listing.owner.username %></i>
+          <hr>
           <%=listing.description %> <br />
           <hr>
           &#8377; <%=listing.price?.toLocaleString("en-IN") %> <br />
