--- a/views/show.ejs
+++ b/views/show.ejs
@@ -27,12 +27,15 @@
       </div>
     </div>
 
-    <div class="btns mb-5">
-      <a class="btn btn-dark offset-2 edit-btn" href="/listings/<%=listing._id %>/edit">Edit this Listing</a>
-      <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
-        <button class="offset-4 btn btn-dark" >Delete</button>
-      </form>
-    </div>
+    <% if (currUser && currUser._id.equals(listing.owner._id)) {%>
+      
+      <div class="btns mb-5">
+        <a class="btn btn-dark offset-2 edit-btn" href="/listings/<%=listing._id %>/edit">Edit this Listing</a>
+        <form method="post" action="/listings/<%= listing._id %>?_method=DELETE">
+          <button class="offset-4 btn btn-dark" >Delete</button>
+        </form>
+      </div>
+      <% } %>
     <div>
       <hr>
       <h4>Leave a Reaview</h4>
