--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 
 <body>
   <br />
-  <h2>Edit your Listing</h2>
+  <h2 class="offset-2">Edit your Listing</h2>
   <form
     method="post"
     action="/listings/<%= listing._id %>?_method=PUT"
@@ -79,6 +79,6 @@
         <br />
       </div>
     </div>
-    <button class="edit-btn btn btn-dark">Edit</button>
+    <button class="edit-btn mb-4 btn offset-2 btn-dark">Edit</button>
   </form>
 </body>
