--- a/views/new.ejs
+++ b/views/new.ejs
@@ -173,7 +173,7 @@
       </div>
     </div>
     <br>
-    <button class="new-btn btn btn-dark" type="submit">Add</button>
+    <button class="new-btn mb-4 btn btn-dark" type="submit">Add</button>
   </form>
 </div>
 </div>
