--- a/views/show.ejs
+++ b/views/show.ejs
@@ -27,6 +27,8 @@
       </div>
     </div>
 
+    <% if (currUser && listing.owner._id.equals(currUser._id)) { %>
+      
       
       <div class="btns mb-5">
         <a class="btn btn-dark offset-2 edit-btn" href="/listings/<%=listing._id %>/edit">Edit this Listing</a>
@@ -34,8 +36,12 @@
           <button class="offset-4 btn btn-dark" >Delete</button>
         </form>
       </div>
-    <div>
-      <hr>
+      <%} %>
+      <% if (currUser) {%>
+        
+        
+        <div>
+     
       <h4>Leave a Reaview</h4>
       <form novalidate class="needs-validation" action="/listings/<%=listing._id %>/reviews" method="POST">
         <div class="mb-3 mt-3">
@@ -49,7 +55,10 @@
         </div>
         <button class="btn btn-outline-dark">Submit</button>
       </form>
+      <%} %>
+      
       <hr>
+
       <p><b>All Reviews</b></p>
       <div class="row">
         <% for(review of listing.reviews){ %>
