--- a/views/show.ejs
+++ b/views/show.ejs
@@ -93,21 +93,24 @@
     </div>
      <% } %>
   </div>
-<div class="col-6 offset-1 mb-3 mt-2">
-  <h3>Where you'll be</h3>
-  <div id="map"></div>
+  <div class="col-6 offset-1 mb-3 mt-2">
+    <h3>Where you'll be</h3>
+    <div id="map"></div>
   </div>
+  
   <script>
-    let mapToken = "<%= process.env.MAP_TOKEN %>";
-    console.log(mapToken);
-    mapboxgl.accessToken = mapToken;
-    mapboxgl.on('style.load', function() {
-      const map = new mapboxgl.Map({
-          container: 'map', // container ID
-          center: [-74.5, 40], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-          zoom: 9 // starting zoom
-      });
+  let mapToken = "<%= process.env.MAP_TOKEN %>";
+  console.log(mapToken);
+  mapboxgl.accessToken = mapToken;
+
+  mapboxgl.ready(function() {
+    const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        center: [-74.5, 40], // starting position [lng, lat]. Note that lat must be set between -90 and 90
+        zoom: 9 // starting zoom
     });
-  </script>
+  });
+</script>
+
   <br>
 </body>
