--- a/views/show.ejs
+++ b/views/show.ejs
@@ -15,7 +15,7 @@
       />
       <div class="card-body mt-4 col-30">
         <p class="card-text">
-          Owned by ~ <i><%= listing.owner.username %></i>
+          Owned by ~ <i><%= //listing.owner.username %></i>
           <hr>
           <%=listing.description %> <br />
           <hr>
@@ -81,7 +81,7 @@
         <% for(review of listing.reviews){ %>
           <div class="card col-5 ms-3 mb-3 reviews-card">
             <div class="card-body">
-              <h5 class="card-title">@<%= review.author.username %></h5>
+              <h5 class="card-title">@<%= //review.author.username %></h5>
               <p class="starability-result star-rating" data-rating="<%= review.rating %>"></p>
               <p class="card-text"><%= review.comment %></p>
             </div>
@@ -93,7 +93,7 @@
     </div>
      <% } %>
   </div>
-  <div class="col-6 offset-1 mb-3 mt-2">
+  <div class="col-6 offset-3 mb-3 mt-2">
     <h3>Where you'll be</h3>
     <div id="map"></div>
   </div>
@@ -102,14 +102,12 @@
   let mapToken = "<%= process.env.MAP_TOKEN %>";
   console.log(mapToken);
   mapboxgl.accessToken = mapToken;
-
-  mapboxgl.ready(function() {
-    const map = new mapboxgl.Map({
-        container: 'map', // container ID
-        center: [-74.5, 40], // starting position [lng, lat]. Note that lat must be set between -90 and 90
-        zoom: 9 // starting zoom
+  const map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/mapbox/streets-v9',
+        zoom: 1,
+        center: [77.209, 28.6139]
     });
-  });
 </script>
 
   <br>
