--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,11 +1,11 @@
 
 
   <% layout("/layouts/boilerplate") %>
-<script>
-  const mapToken = "<%= process.env.MAP_TOKEN %>";
-  const coordinates = "<%- JSON.stringify(listing.geometry.coordinates) %>";
-
-</script>
+  <script>
+    const mapToken = "<%= process.env.MAP_TOKEN %>";
+    const coordinates = <%- JSON.stringify(listing.geometry.coordinates) %>;
+  
+  </script>
 <body>
   <div class="row">
     <h1 class="col-8 offset-1"><%= listing.title %></h1>
